Documentation + small improvements

--- a/video/video_hours.ipynb
+++ b/video/video_hours.ipynb
@@ -4,18 +4,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Video of Volcano Camera Images During Certain Hours of Each Day\n",
-    "--\n",
+    "# Video of Volcano Camera Images During Certain Hours of Each Day\n",
     "\n",
-    "This focuses on a sub-area of the image and only images recorded during certain hours of each day."
+    "## Purpose:\n",
+    "To create a video from a series of webcam images. Images are selected from the 'database' on the basis of their date, and the time of the day they were taken. For example, all images taken between 0200 and 0300 UTC each day from January 7 to February 6.\n",
+    "\n",
+    "## Technical Details:\n",
+    "Cropping an image is done by default. Currently, the only way to not crop an image, is to crop to the 'full size'.\n",
+    "\n",
+    "The image crop is set by variables x1, x2, y1, y2. x1,y1 represents the top left of the image (the image coordinate system starts at the top left), and x2,y2 the bottom right. These need to be specified for each view, and checked/adjusted if a camera's view changes.\n",
+    "\n",
+    "The cropped images can be contrast enhanced using an algorithm called CLAHE (Contrast Limited Adaptive Histogram Equalization). The variable 'enhance' can be set to True/False depending on whether enhancement is required.\n",
+    "\n",
+    "The date-time of each image is written in the top-left of the image.\n",
+    "\n",
+    "Directories for images and video need to be specified.\n",
+    "\n",
+    "The image 'database' is the GeoNet public ftp site. On an Ubuntu operating system, the ftp site mounts as a directory, and can therefore be searched for appropriate images. The GeoNet public ftp site therefore needs to be mounted for this notebook to run.\n",
+    "\n",
+    "## Author:\n",
+    "Steven Sherburn\n",
+    "\n",
+    "## Date:\n",
+    "March 2018"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
@@ -31,10 +48,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def imfdt(imfile):\n",
@@ -51,10 +66,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def clahe(img):\n",
@@ -81,16 +94,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#UTC date range for images to view\n",
-    "date1 = '2017-12-01'\n",
-    "date2 = '2017-12-31'\n",
-    "camera = 'WIWR'"
+    "date1 = '2018-01-01'\n",
+    "date2 = '2018-04-30'\n",
+    "camera = 'WINR'"
    ]
   },
   {
@@ -102,10 +113,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "font                   = cv2.FONT_HERSHEY_SIMPLEX\n",
@@ -124,14 +133,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "hour1 = 0\n",
-    "hour2 = 2\n",
+    "hour2 = 1\n",
     "strhour1 = str(hour1).zfill(2)\n",
     "strhour2 = str(hour2).zfill(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Enhance the images?**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enhance = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Image crop**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#WINR focus on 2012 dome, 2018-05-30 onwards\n",
+    "# y1 = 650\n",
+    "# y2 = 900\n",
+    "# x1 = 1550\n",
+    "# x2 = 1950\n",
+    "\n",
+    "#WINR focus on 2012 dome, up to 2018-05-29\n",
+    "y1 = 715\n",
+    "y2 = 965\n",
+    "x1 = 1560\n",
+    "x2 = 1960"
    ]
   },
   {
@@ -143,10 +194,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#as mounted, this is image directory\n",
@@ -154,8 +203,8 @@
     "\n",
     "#directory to write crops\n",
     "imgdir = '/home/sherburn/geonet/volcam_images'\n",
-    "crpdir = os.path.join(basedir, 'crop')\n",
-    "viddir = os.path.join(basedir, 'video')"
+    "crpdir = os.path.join(imgdir, '2012dome_crop')\n",
+    "viddir = os.path.join(imgdir, '2012dome_video')"
    ]
   },
   {
@@ -167,49 +216,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20171201\n",
-      "20171202\n",
-      "20171203\n",
-      "20171204\n",
-      "20171205\n",
-      "20171206\n",
-      "20171207\n",
-      "20171208\n",
-      "20171209\n",
-      "20171210\n",
-      "20171211\n",
-      "20171212\n",
-      "20171213\n",
-      "20171214\n",
-      "20171215\n",
-      "20171216\n",
-      "20171217\n",
-      "20171218\n",
-      "20171219\n",
-      "20171220\n",
-      "20171221\n",
-      "20171222\n",
-      "20171223\n",
-      "20171224\n",
-      "20171225\n",
-      "20171226\n",
-      "20171227\n",
-      "20171228\n",
-      "20171229\n",
-      "20171230\n",
-      "20171231\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for date in pd.date_range(date1, date2):\n",
     "    year = date.year\n",
@@ -225,8 +236,11 @@
     "            imtime = imfdt(file)\n",
     "            if (imtime < time_end and imtime > time_start):\n",
     "                img = cv2.imread(imfile)\n",
-    "                crop = img[400:700,750:1450]\n",
-    "                clahe(crop) #enhanced the crop\n",
+    "                crop = img[y1:y2, x1:x2]\n",
+    "                if enhance:\n",
+    "                    clahe(crop)\n",
+    "                else:\n",
+    "                    img2 = crop\n",
     "                cv2.putText(img2,imtime.strftime('%Y-%m-%d %H:%M'), bottomLeftCornerOfText, font, fontScale, fontColor, lineType)\n",
     "                crfile = os.path.join(crpdir, file)\n",
     "                cv2.imwrite(crfile, img2)\n",
@@ -242,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
