integer ticks for small range y-axis

--- a/taranaki_report/taranaki_trc_report.ipynb
+++ b/taranaki_report/taranaki_trc_report.ipynb
@@ -36,8 +36,10 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.gridspec as gridspec\n",
     "import matplotlib as mpl\n",
+    "from matplotlib.ticker import MultipleLocator\n",
     "from matplotlib.transforms import offset_copy\n",
     "from matplotlib import patheffects\n",
+    "\n",
     "\n",
     "import scipy.signal\n",
     "import numpy as np\n",
@@ -493,9 +495,15 @@
     "ax1.bar(mcount.index, mcount.publicid, width = 10, color='blue', edgecolor='blue', align='edge', label='M>=4 earthquakes')\n",
     "ax1.set_xlim([startall,end])\n",
     "ax1.legend(loc='upper left')\n",
+    "#want integer ticks(grid), default for small y-range gives 0.5 spacing\n",
+    "spacing = 1\n",
+    "majorLocator = MultipleLocator(spacing)\n",
+    "ax1.yaxis.set_major_locator(majorLocator)\n",
+    "\n",
     "mcount = eqs50m3.resample('1M', label='left', closed='left').count()\n",
     "ax2.grid(b=True, which='major', color='b', linestyle='--', alpha=0.5)\n",
     "ax2.bar(mcount.index, mcount.publicid, width = 10, color='green', edgecolor='green', align='edge', label='M>=3 earthquakes')\n",
+    "\n",
     "ax2.legend(loc='upper left')\n",
     "mcount = eqs50.resample('1M', label='left', closed='left').count()\n",
     "ax3.grid(b=True, which='major', color='b', linestyle='--', alpha=0.5)\n",
@@ -838,7 +846,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
