include plot gain in plot title and filename

--- a/drumplot.ipynb
+++ b/drumplot.ipynb
@@ -122,6 +122,7 @@
     "zerophase = False\n",
     "defscale = 1e4\n",
     "scale = defscale\n",
+    "magn = 1\n",
     "\n",
     "#size ratio to match aspect ratio of print paper\n",
     "xsize = 3200\n",
@@ -186,7 +187,7 @@
     "  filt = f['new']\n",
     "\n",
     "def gain(g):\n",
-    "  global magn, scale  \n",
+    "  global magn, scale\n",
     "  magn = g['new']\n",
     "  scale = defscale / magn\n",
     "\n",
@@ -194,20 +195,20 @@
     "    if (filt):\n",
     "        trcp = tr.copy()\n",
     "        trcp.filter('bandpass', freqmin=lp, freqmax=hp, corners=corners, zerophase=zerophase)\n",
-    "        title = site+'_'+pdate+'_bandpass_'+str(lp)+'-'+str(hp)\n",
+    "        title = site+'_'+pdate+'_bandpass_'+str(lp)+'-'+str(hp)+'_plot-gain_'+str(magn)\n",
     "        trcp.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title)\n",
     "    else:\n",
-    "        title = site + '_' + pdate + '_nofilt'\n",
+    "        title = site + '_' + pdate + '_nofilt'+'_plot-gain_'+str(magn)\n",
     "        tr.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title)\n",
     "\n",
     "def output(o):\n",
     "    if (filt):\n",
     "        trcp = tr.copy()\n",
     "        trcp.filter('bandpass', freqmin=lp, freqmax=hp, corners=corners, zerophase=zerophase)\n",
-    "        title = site+'_'+pdate+'_bandpass_'+str(lp)+'-'+str(hp)\n",
+    "        title = site+'_'+pdate+'_bandpass_'+str(lp)+'-'+str(hp)+'_plot-gain_'+str(magn)\n",
     "        trcp.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title, outfile=title+'.drum.png')\n",
     "    else:\n",
-    "        title = site+'_'+pdate+'_nofilt'\n",
+    "        title = site+'_'+pdate+'_nofilt'+'_plot-gain_'+str(magn)\n",
     "        tr.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title, outfile=title+'.drum.png')"
    ]
   },
@@ -215,12 +216,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "s = widgets.Select(\n",
-    "    options=['select stream', 'WIZ.10.HHZ.NZ', 'WSRZ.10.HHZ.NZ', 'MAVZ.10.HHZ.NZ', 'FWVZ.10.HHZ.NZ', 'WHVZ.10.HHZ.NZ', 'TRVZ.10.HHZ.NZ', 'GLKZ.10.HHZ.NZ'],\n",
+    "    options=['select stream', 'TMVZ.10.HHZ.NZ', 'TMVZ.10.HHN.NZ', 'TMVZ.10.HHE.NZ', 'NMEZ.10.EHZ.NZ', 'NBEZ.10.EHZ.NZ', 'NEZ.11.EHZ.NZ', 'KHEZ.10.HHZ.NZ', 'ETVZ.10.HHZ.NZ', 'OTVZ.10.HHZ.NZ', 'WIZ.10.HHZ.NZ', 'WSRZ.10.HHZ.NZ', 'MAVZ.10.HHZ.NZ', 'FWVZ.10.HHZ.NZ', 'WHVZ.10.HHZ.NZ', 'TRVZ.10.HHZ.NZ', 'GLKZ.10.HHZ.NZ', 'KRVZ.10.EHZ.NZ'],\n",
     "    value='select stream',\n",
     "    description='Stream:',\n",
     "    disabled=False\n",
@@ -274,7 +275,7 @@
     "g=widgets.FloatSlider(\n",
     "    value=1,\n",
     "    min=0.1,\n",
-    "    max=10,\n",
+    "    max=50,\n",
     "    step=0.1,\n",
     "    description='plot gain:',\n",
     "    disabled=False,\n",
@@ -321,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   },
   "widgets": {
    "state": {
