add magnitude vs distance plots

--- a/taranaki_report/taranaki_trc_report.ipynb
+++ b/taranaki_report/taranaki_trc_report.ipynb
@@ -101,9 +101,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "startall = '1994-01-01T00:00:00'\n",
-    "startyear = '2017-07-01T00:00:00'\n",
-    "end = '2018-07-01T00:00:00'"
+    "startall = '1994-01-01'\n",
+    "startyear = '2017-07-01'\n",
+    "end = '2018-07-01'"
    ]
   },
   {
@@ -681,6 +681,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Earthquakes within certain distances of the summit of Mt Taranaki**\n",
+    "\n",
+    "This is to help the TVSAG understand a little better what has been located close to the volcano. \n",
+    "To do this, it is easier to use GeoNet's Web Features Service (WFS) as this offers more functionality in selecting events. https://wfs.geonet.org.nz/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#the park area, 9.5 km from the summit\n",
+    "url = 'http://wfs.geonet.org.nz/geonet/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=geonet:quake_search_v1&outputFormat=csv&cql_filter=depth<50+AND+origintime>='+startall+'+AND+origintime<='+end+'+AND+DWITHIN(origin_geom,Point+(174.063+-39.296),9500,meters)'\n",
+    "park = pd.read_csv(url, parse_dates=['origintime'], index_col='origintime')\n",
+    "park.sort_index(ascending=True, inplace=True) # sort by origintime(index), so events in time order\n",
+    "\n",
+    "#the coast area, 26.5 km from the summit\n",
+    "url = 'http://wfs.geonet.org.nz/geonet/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=geonet:quake_search_v1&outputFormat=csv&cql_filter=depth<50+AND+origintime>='+startall+'+AND+origintime<='+end+'+AND+DWITHIN(origin_geom,Point+(174.063+-39.296),26500,meters)'\n",
+    "coast = pd.read_csv(url, parse_dates=['origintime'], index_col='origintime')\n",
+    "coast.sort_index(ascending=True, inplace=True) # sort by origintime(index), so events in time order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#plot\n",
+    "fig = plt.figure(figsize=(10, 10))\n",
+    "\n",
+    "d1 = datetime.datetime.strptime(startall, \"%Y-%m-%d\")\n",
+    "d2 = datetime.datetime.strptime(end, \"%Y-%m-%d\")\n",
+    "\n",
+    "# magnitude vs time\n",
+    "ax1 = fig.add_subplot(2, 1, 1)\n",
+    "ymax = 1.1 * park.magnitude.max()\n",
+    "ax1.set_ylim([0, ymax])\n",
+    "ax1.plot(park.magnitude, marker='o', color='red', linestyle='None', label='manual')\n",
+    "ax1.text(0.01, 0.98,'Within 9.5 km (ENP circular boundary)', ha='left', va='top', transform=ax1.transAxes, fontsize=14)\n",
+    "ax1.set_ylabel('Magnitude')\n",
+    "\n",
+    "# magnitude vs time\n",
+    "ax2 = fig.add_subplot(2, 1, 2)\n",
+    "ymax = 1.1 * coast.magnitude.max()\n",
+    "ax2.set_ylim([0, ymax])\n",
+    "ax2.plot(coast.magnitude, marker='o', color='red', linestyle='None', label='manual')\n",
+    "ax2.text(0.01, 0.98,'Within 26.5 km (distance to coast)', ha='left', va='top', transform=ax2.transAxes, fontsize=14)\n",
+    "ax2.set_ylabel('Magnitude')\n",
+    "\n",
+    "plt.savefig('park-coast_events.png', dpi=200)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Geodetic Plots - enu for each site, all data and reporting year**"
    ]
   },
@@ -846,7 +904,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
