python3 & add geonet seismicity time-series

--- a/mercury/ngatamariki_annual_report.ipynb
+++ b/mercury/ngatamariki_annual_report.ipynb
@@ -29,9 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#import cartopy\n",
@@ -92,9 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def haversine_np(lon1, lat1, lon2, lat2):\n",
@@ -127,9 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def utm_from_lon(lon):\n",
@@ -213,9 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "lonmin = 176.147\n",
@@ -246,9 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "start = '2012-05-15T00:00:00'\n",
@@ -274,9 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#rotokawa\n",
@@ -316,9 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "names = ['lon', 'lat', 'name']\n",
@@ -351,9 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#this file needs to be kept up to date as new data are processed\n",
@@ -369,8 +353,8 @@
    },
    "outputs": [],
    "source": [
-    "print hypdd.head()\n",
-    "print hypdd.tail()"
+    "print (hypdd.head())\n",
+    "print (hypdd.tail())"
    ]
   },
   {
@@ -392,9 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#filter hypocentres to plot area, to just get ngatamariki\n",
@@ -413,9 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#filter hypocentres for reporting period, to get ngatamariki for just reporting period\n",
@@ -434,9 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#unset ml shows as -9, which plots as M9 symbol, remove\n",
@@ -484,9 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#m1\n",
@@ -586,7 +562,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -675,7 +650,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -768,7 +742,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -787,9 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#export data\n",
@@ -802,9 +773,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#read output of external program\n",
@@ -834,9 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#m1\n",
@@ -852,9 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#read well data (pre-projected using well_section.csh)\n",
@@ -986,8 +951,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print len(hyprptnorth)\n",
-    "print len(hyprptsouth)"
+    "print (len(hyprptnorth))\n",
+    "print (len(hyprptsouth))"
    ]
   },
   {
@@ -1000,9 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#divide into north and south clusters, latitude is that of power station\n",
@@ -1028,7 +991,7 @@
    },
    "outputs": [],
    "source": [
-    "an = annual.plot.bar(stacked=True, color=['red', 'black'])\n",
+    "an = annual.plot.bar(color=['red', 'black'])\n",
     "an.set_ylabel('Number per year')\n",
     "an.set_xlabel('Year')\n",
     "\n",
@@ -1053,9 +1016,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "wlonmin = 176.116\n",
@@ -1123,7 +1084,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1131,25 +1091,275 @@
     "%%bash\n",
     "convert mercury_wide-station_map.png -trim +repage mercury_wide-station_map.png"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GeoNet seismicity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#box for search area, this is plenty big enough to les get events within 10 km of reference point\n",
+    "bbox = '176.0,-38.8,176.5,-38.3'\n",
+    "maxdep = '20'\n",
+    "\n",
+    "url = 'https://quakesearch.geonet.org.nz/csv?bbox='+bbox+'&maxdepth='+maxdep+'&startdate='+start+'&enddate='+end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eqs = pd.read_csv(url, parse_dates=['origintime'], index_col='origintime', usecols=[2,4,5,6,7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eqs.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#reference point (Ngatamariki power station)\n",
+    "latref = -38.546143\n",
+    "lonref = 176.195504"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eqs['dist'] = haversine_np(eqs['longitude'],eqs[' latitude'],lonref,latref)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eqs10 = eqs[eqs['dist']<10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eqs10['dist'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eqs10.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eqs10[eqs10[' magnitude']>=3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Number of GeoNet earthquakes within 5 & 10 km during the report period**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eqs[' magnitude'][(eqs['dist']<=10)&(eqs.index>=thisrpt)&(eqs.index<=end)].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eqs[' magnitude'][(eqs['dist']<=5)&(eqs.index>=thisrpt)&(eqs.index<=end)].describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**And for the previous report period**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eqs[' magnitude'][(eqs['dist']<=10)&(eqs.index>=lastrpt)&(eqs.index<=lastend)].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eqs[' magnitude'][(eqs['dist']<=5)&(eqs.index>=lastrpt)&(eqs.index<=lastend)].describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**And the one before that**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eqs[' magnitude'][(eqs['dist']<=10)&(eqs.index>=last2rpt)&(eqs.index<=last2end)].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eqs[' magnitude'][(eqs['dist']<=5)&(eqs.index>=last2rpt)&(eqs.index<=last2end)].describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Biggest events**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eqs[eqs[' magnitude']>3.5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Plots vs Time**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, (ax1, ax2) = plt.subplots(nrows=2,ncols=1, sharex=True, figsize=(22,10))\n",
+    "\n",
+    "#distance vs time\n",
+    "eqs10.plot(y='dist', marker='o', markersize=5, linestyle='None', color='black', legend=False, ax=ax1)\n",
+    "\n",
+    "#plot label A\n",
+    "ax1.text('2012-06-01', 9, 'A', size=16)\n",
+    "\n",
+    "#yearly ticks and grid\n",
+    "majorTick = mpl.dates.YearLocator(1)\n",
+    "majorFormat = mpl.dates.DateFormatter('%Y')\n",
+    "ax1.xaxis.set_major_locator(majorTick)\n",
+    "ax1.xaxis.set_major_formatter(majorFormat)\n",
+    "ax1.xaxis.grid()\n",
+    "ax1.yaxis.grid()\n",
+    "\n",
+    "ax1.set_ylabel('Distance (km)')\n",
+    "\n",
+    "ax1.tick_params(labelright = True)\n",
+    "\n",
+    "#dashed line at dist=5 km\n",
+    "ax1.axhline(y=5, color='blue', linestyle='--')\n",
+    "\n",
+    "#magnitude vs time\n",
+    "eqs10.plot(y=' magnitude', marker='o', markersize=5, linestyle='None', color='black', legend=False, ax=ax2)\n",
+    "\n",
+    "#plot label 8\n",
+    "ax2.text('2012-06-01', 3.7, 'B', size=16)\n",
+    "\n",
+    "#yearly ticks and grid\n",
+    "ax2.xaxis.set_major_locator(majorTick)\n",
+    "ax2.xaxis.set_major_formatter(majorFormat)\n",
+    "ax2.xaxis.grid()\n",
+    "ax2.yaxis.grid()\n",
+    "\n",
+    "ax2.set_ylim([0,4.2])\n",
+    "ax2.set_xlim(start, end)\n",
+    "ax2.set_ylabel('Magnitude')\n",
+    "ax2.tick_params(labelright = True)\n",
+    "\n",
+    "#dashed line at magnitude=2, about felt threshold\n",
+    "ax2.axhline(y=2, color='blue', linestyle='--')\n",
+    "\n",
+    "#indicate this report\n",
+    "ax2.axvline(x=thisrpt, color='blue', linestyle='--')\n",
+    "ax2.text(thisrpt, 0.5, 'this report', color='blue')\n",
+    "ax2.arrow(thisrpt, 0.7, 100, 0, head_width=0.1, head_length=20, fc='blue', ec='blue')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('geonet_long-term_time-series.png', dpi=200)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
