geonet time-series uses 5 km radius for part b

--- a/mercury/ngatamariki_annual_report.ipynb
+++ b/mercury/ngatamariki_annual_report.ipynb
@@ -1162,7 +1162,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "eqs10['dist'].describe()"
@@ -1184,6 +1186,35 @@
    "outputs": [],
    "source": [
     "eqs10[eqs10[' magnitude']>=3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eqs5 = eqs[eqs['dist']<5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "eqs5['dist'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eqs5.head()"
    ]
   },
   {
@@ -1314,7 +1345,7 @@
     "ax1.axhline(y=5, color='blue', linestyle='--')\n",
     "\n",
     "#magnitude vs time\n",
-    "eqs10.plot(y=' magnitude', marker='o', markersize=5, linestyle='None', color='black', legend=False, ax=ax2)\n",
+    "eqs5.plot(y=' magnitude', marker='o', markersize=5, linestyle='None', color='black', legend=False, ax=ax2)\n",
     "\n",
     "#plot label 8\n",
     "ax2.text('2012-06-01', 3.7, 'B', size=16)\n",
