annual histogram includes totals

--- a/mercury/ngatamariki_annual_report.ipynb
+++ b/mercury/ngatamariki_annual_report.ipynb
@@ -976,11 +976,21 @@
     "north = hypdd[hypdd['latitude']>-38.546]\n",
     "south = hypdd[hypdd['latitude']<-38.546]\n",
     "\n",
+    "annualall = hypdd['latitude'].groupby([hypdd.index.year]).agg('count')\n",
     "annualnorth = north['latitude'].groupby([north.index.year]).agg('count')\n",
     "annualsouth = south['latitude'].groupby([south.index.year]).agg('count')\n",
     "\n",
-    "annual = pd.concat([annualnorth, annualsouth], axis=1)\n",
-    "annual.columns=['north', 'south']"
+    "annual = pd.concat([annualall, annualnorth, annualsouth], axis=1)\n",
+    "annual.columns=['all', 'north', 'south']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "annual.head()"
    ]
   },
   {
@@ -991,7 +1001,7 @@
    },
    "outputs": [],
    "source": [
-    "an = annual.plot.bar(color=['red', 'black'])\n",
+    "an = annual.plot.bar(color=['blue', 'red', 'black'])\n",
     "an.set_ylabel('Number per year')\n",
     "an.set_xlabel('Year')\n",
     "\n",
